  29: Disguise now checks badnameslist
  30. IndoorWaterSurface now generates IndoorUnderWaterGrid - would normally shy from this as a backward compatibility issue, but its an oversight.
  31. New locales: IndoorUnderWaterGrid, IndoorUnderWaterThinGrid, and IndoorWaterThinSurface classes
  32. Can now export/import entire accounts
  33. Quests will now save/restore their suspended status.
# Build 5.8.0.1 Release 7/22/2013
  Bug fix release -- removed Go-Ahead chars for tinyfugue
# Build 5.8.0 Release 7/21/2013
   1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
   ^^^Check out the altered WebServer guide, and make sure you integrate the pub. ini, admin.ini, and common.ini if you customized them.
   2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
   3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
   4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)
   5. Generic Abilities will now import/export when races that use them export
   6. (Internal) New factions now default into /resources/factions -- legacy locations will work too though.
   7. New Channel flag (ACCOUNTOOC) to force account names instead of channel names into messages.
   8. (Internal) randomdata.xml now at /resources/randareas/example.xml -- update your random area files and random Areas!
   9. MUD Logging to separate files now has more options, such as rolling logs based on entries or bytes, etc.
  10. Web Forum system now supports participation by empty Accounts (if using the account system), and web subscribe/unsubscribe
  11. Consolidated Session and Tick threads: check new coffeemud.ini file for new MAXWORKERTHREADS and MINWORKERTHREADS. Major drop in thread usage!