@@ -1615,7 +1615,11 @@ ACCMSGS=OFF
 # AUTOLANGUAGE
 # Disables the system whereby players attempt to speak the language of the
 # person they are addressing, and auto-address the only person in the room
-#.
+#
+# SLOW_AGEING
+# Disables the system that prevents users who have been logged out for a long
+# time from aging more than 1 year (or so). 
+#
 # You may also disable a command by including the flag COMMAND_* where * is
 # the command class name (not the execution/key word).
 #
