@@ -35,6 +35,7 @@
   31. New locales: IndoorUnderWaterGrid, IndoorUnderWaterThinGrid, and IndoorWaterThinSurface classes
   32. Can now export/import entire accounts
   33. Quests will now save/restore their suspended status.
+  34. Characters logged out for over 1 mud year will not have their age advance more than 1 year.  See SLOW_AGEING DISABLE flag to revert to previous alg.
 # Build 5.8.0.1 Release 7/22/2013
   Bug fix release -- removed Go-Ahead chars for tinyfugue
 # Build 5.8.0 Release 7/21/2013
